[package]
name = "scriplets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = {version = "0.8", features = ["lua54", "vendored", "send"]}
bevy = {version = "0.8", features = ["dynamic"]}
bevy_rapier2d = {version = "0.16", features = ["debug-render", "parallel"]}
