[package]
name = "scriplets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Reminder: use blake3 for checking if prototypes are equal at the client and server
# Reminder: for more robust and convenient camera movement, use bevy_mod_raycast

[dependencies]
mlua = {version = "0.8", features = ["lua54", "vendored", "send"]}
bevy = {version = "0.8", features = ["dynamic"]}
bevy_rapier2d = {version = "0.16", features = ["debug-render", "parallel"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
scriplets-derive = {path = "./scriplets-derive"}
